meerai-macros/src/tool/snapshots/meerai_macros__tool__derive__test__snapshot_derive_with_multiple_params.snap
---
source: meerai-macros/src/tool/derive.rs
expression: "crate::test_utils::pretty_macro_output(&output)"
snapshot_kind: text
---
use meerai_core::{ToolDefinition, ToolError, ToolOutput, Toolset};
#[derive(serde::Serialize, serde::Deserialize, Debug)]
pub struct HelloArgs {
    pub arg1: String,
    pub arg2: isize,
    pub arg3: bool,
    pub arg4: Vec<String>,
    pub arg5: serde_json::Value,
    pub arg6: (),
    pub arg7: serde_json::Value,
    pub arg8: f64,
}
impl std::fmt::Display for HelloArgs {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", serde_json::to_string(self).unwrap())
    }
}
#[async_trait::async_trait]
trait Invoke {
    async fn hello(&self, args: &HelloArgs) -> Result<ToolOutput, ToolError>;
}
#[async_trait::async_trait]
impl Toolset for HelloDerive
where
    Self: Invoke,
{
    fn name(&self) -> String {
        "hello_derive".to_string()
    }
    fn definition(&self) -> Vec<ToolDefinition> {
        vec!(
            ToolDefinition { r#type : "function".to_string(), name : "hello_derive-hello"
            .to_string(), description : "Hello world".to_string(), parameters :
            serde_json::json!({ "type" : "object", "properties" : { "arg1" : { "type" :
            "string", "description" : "" }, "arg2" : { "type" : "integer", "description"
            : "" }, "arg3" : { "type" : "boolean", "description" : "" }, "arg4" : {
            "type" : "array", "description" : "" }, "arg5" : { "type" : "object",
            "description" : "" }, "arg6" : { "type" : "null", "description" : "" },
            "arg7" : { "type" : "any", "description" : "" }, "arg8" : { "type" :
            "number", "description" : "" } } }), }
        )
    }
    fn contain(&self, fn_name: &str) -> bool {
        match fn_name {
            "hello_derive-hello" => true,
            _ => false,
        }
    }
    async fn invoke(&self, fn_name: &str, args: &str) -> Result<ToolOutput, ToolError> {
        match fn_name {
            "hello_derive-hello" => {
                let args: HelloArgs = serde_json::from_str(args)
                    .map_err(|e| ToolError::WrongArguments(e))?;
                let result = self.hello(&args).await?;
                Ok(result)
            }
            _ => Err(ToolError::InvalidFunctionName(fn_name.to_string())),
        }
    }
}
