meerai-macros/src/tool/snapshots/meerai_macros__tool__derive__test__snapshot_derive_without_param.snap
---
source: meerai-macros/src/tool/derive.rs
expression: "crate::test_utils::pretty_macro_output(&output)"
snapshot_kind: text
---
use meerai_core::{ToolDefinition, ToolError, ToolOutput, Toolset};
#[async_trait::async_trait]
trait Invoke {
    async fn hello(&self) -> Result<ToolOutput, ToolError>;
}
#[async_trait::async_trait]
impl Toolset for HelloDerive
where
    Self: Invoke,
{
    fn name(&self) -> String {
        "hello_derive".to_string()
    }
    fn definition(&self) -> Vec<ToolDefinition> {
        vec!(
            ToolDefinition { r#type : "function".to_string(), name : "hello_derive-hello"
            .to_string(), description : "Hello world".to_string(), parameters :
            serde_json::json!({ "type" : "object", "properties" : {} }), }
        )
    }
    fn contain(&self, fn_name: &str) -> bool {
        match fn_name {
            "hello_derive-hello" => true,
            _ => false,
        }
    }
    async fn invoke(&self, fn_name: &str, args: &str) -> Result<ToolOutput, ToolError> {
        match fn_name {
            "hello_derive-hello" => {
                let result = self.hello().await?;
                Ok(result)
            }
            _ => Err(ToolError::InvalidFunctionName(fn_name.to_string())),
        }
    }
}
